k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: r16a-ares
  labels:
    app.kubernetes.io/name: ares
