k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: r16a-ares
  labels:
    app.kubernetes.io/name: ares
    app.kubernetes.io/component: backend
spec:
  selector:
    app.kubernetes.io/name: ares
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000
