k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: r16a-ares
  labels:
    app.kubernetes.io/name: ares
    app.kubernetes.io/component: frontend
spec:
  selector:
    app.kubernetes.io/name: ares
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
